- improve validation.js
- change name of JS form validation function to zmFormValidation.validate(form)
  templates: demo/login.php (Ajax login)
- change validation.js to be a proper js file, so no <script> wrapper in the
  .js file any more
- add socket option to database config array
- simplify ZMFormData (get rid of field restrictions) and remove FormData

Release 0.9.10
- restructure store and admin code into separate apps with most of the store
  code shared
- remove custom Toolbox class and just use the setting to configure tools;
  this simplifies code at the cost of a little less documentation (tools are
	no longer visible via phpdoc)
- move viewDir support from SavantView to ZMSavantView and make 'views/' the
  default
- make default db provider more resiliant against loss of native resource (may
  happen if used in session handler)
- add zen cart compatible session handler for db storage
- add sacs handler for admin that supports roles
- make view data set via the controllers findView() method take precendence
  over data from getViewData()
- streamline saving/loading messages to/from the session
- implement ZMRequest::setFollowUpUrl() and getFollowUpUrl(), deprecate
  overriden versions in Request
- port zen_ functions into ZMZenCartAuthentication
- allow to set the single entry point filename (default is index.php) via
  setting: 'zenmagick.mvc.request.index'
- adjust exception logging log level a bit
- captcha: avoid using undefined define
- ZMCategories: add parent_id to SQL sort order
- flyoutCategories: initial version
- jscrollerSideboxes: initial version
- integrate ZMViewUtils into ZMSavantView; provide new $resources view var
  replacing the $utils method wrapper around ZMTemplateManager
- properly split template and resource path for view related methods
- fix b:#2996120 - missing parameter in pagination links
- add link to new admin UI to ZenMagick admin menu (marked experimental)
- add ZMNetUtils::getDomain()