@@ -97,10 +97,10 @@ array(
     ),
     'customers_info' => array(
         'accountId' => 'column=customers_info_id;type=integer;key=true',
-        //'lastLogonDate' => 'column=customers_info_date_of_last_logon;type=datetime',
-        //'numberOfLogons' => 'column=customers_info_number_of_logons;type=integer',
+        'lastLogonDate' => 'column=customers_info_date_of_last_logon;type=datetime',
+        'numberOfLogons' => 'column=customers_info_number_of_logons;type=integer',
         'accountCreateDate' => 'column=customers_info_date_account_created;type=datetime',
-        //'lastModifiedDate' => 'column=customers_info_date_account_last_modified;type=datetime',
+        'lastModifiedDate' => 'column=customers_info_date_account_last_modified;type=datetime',
         'globalProductSubscriber' => 'column=global_product_notifications;type=boolean'
     ),
     'products_notifications' => array(
